# nors

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
examples/: package.json
examples/bun/: README.md  bun.lockb  package.json
examples/nors/: package.json
examples/yarn/: package.json
lib/: cli.ts
lib/commands/: init.ts  install.ts
lib/utils/: download.ts  log.ts  resolve.ts  sort-keys.ts
src/: cli.ts  file_system.rs  fs.rs  http.rs  main.rs
src/manifest/: init.rs  install.rs
