[package]
name = "nors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colour = "0.7.0"
dialoguer = "0.11.0"
reqwest = "0.11.23"
serde_json = "1.0.1"
